fix: card list overflow info

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -21,7 +21,7 @@ $breakpoint-small: 768px;
   display: grid;
   grid-template-columns: 50px auto 80px 50px;
   align-items: center;
-  width: 96%;
+  width: 100%;
   height: 60px;
   margin-top: 3px;
   padding: 10px;
